--- a/_config.yml
+++ b/_config.yml
@@ -88,8 +88,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Beneath the Surface # blog_name will be displayed in your blog page
+blog_description: exploring groundwater systems through science, modeling, and integrated water management.
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
