--- a/_config.yml
+++ b/_config.yml
@@ -265,8 +265,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Casillas-Trasviña]
-  first_name: [J. Alberto]
+  last_name: [Casillas-Trasvina]
+  first_name: [Alberto]
 
   style: apa
   locale: en
