--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,9 @@ disqus_shortname: al-folio # put your disqus shortname
 # you can display them in your blog by adding a link to the RSS feed.
 external_sources:
   - name: 'MODFLOW 6: USGS Modular Hydrologic Model'
-    rss_url: https://www.usgs.gov/software/modflow-6-usgs-modular-hydrologic-model
+    post:
+      - url: https://www.usgs.gov/software/modflow-6-usgs-modular-hydrologic-model
+        published_date: 2024-12-19
   - name: The {RMODFLOW} R package
     posts:
       - url: https://rogiersbart.github.io/RMODFLOW/index.html#the-rmodflow-r-package-pre--and-post-processing-of-modflow-files
