updates to news and blog permalinks

--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 
 blog_name: Beneath the Surface # blog_name will be displayed in your blog page
 blog_description: exploring groundwater systems through science, modeling, and integrated water management.
-permalink: /blog/:year/:title/
+permalink: /posts/:year/:title/
 lsi: false # produce an index for related posts
 
 # Pagination
